@@ -71,6 +71,9 @@
 5.重构：添加submenu点击功能
 6.重构：添加新闻点击功能
 
+[shenglong-electricv_1.0.0.1 2014-03-15 张春生]
+1.重构：增加新闻列表分页加载功能
+
 --备注分类
 1、新功能：
 2、Bug:
